# My-Coin

./: .gitignore  Client_Window.py  Entrence_Node.py  Message.py  Node.py  README.md  Transactions.py  User_Node.py  block.py  notatki.ipynb  pyproject.toml  test.py  test_block.py  utils.py
my-coin/: Home_Node.py  Message.py  Node.py  Transactions.py  block.py  test_block.py  utils.py
